<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bm.purgym.ui.main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_add_member"
        android:name="com.bm.purgym.ui.main.ui.addmember.AddMemberFragment"
        android:label="@string/tambah_member"
        tools:layout="@layout/fragment_add_member" />

    <fragment
        android:id="@+id/nav_change_password"
        android:name="com.bm.purgym.ui.main.ui.changepassword.ChangePasswordFragment"
        android:label="@string/ganti_password"
        tools:layout="@layout/fragment_change_password" />

    <fragment
        android:id="@+id/nav_about_apps"
        android:name="com.bm.purgym.ui.main.ui.aboutapps.AboutAppsFragment"
        android:label="@string/tentang_aplikasi"
        tools:layout="@layout/fragment_about_apps" />
</navigation>